<?xml version="1.0"?>
<package>
  <name>uarm_description</name>
  <version>1.0.0</version>
  <description>
     uarm_description provides a model of uArm for simulation and visualization.
 </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dennn@e1.ru">dennn66</maintainer>


  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
<url type="UFactory repositories">https://github.com/UFactory</url> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


</package>
